# chanager

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-rest  Dockerfile-tcp  docker-compose-rest.yml  docker-compose-tcp.yml  docker-compose.yml  pyproject.toml
app/: chmng.py  client.py
app/core/: commands.py  config.py
app_quic/: chmng.py  client.py
app_rest/: .env  chmng_app.py  client_app.py
app_rest/core/: config.py  http.py  utils.py
app_rest/schemas/: chmng.py  client.py
app_tcp/: chmng.py  client.py
app_tcp/core/: commands.py
