[tool.poetry]
name = "chanager"
version = "0.1.0"
description = ""
authors = ["mahdihaghverdi <mahdihaghverdiliewpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
