[tool.poetry]
name = "chanager"
version = "0.1.0"
description = ""
authors = ["mahdihaghverdi <mahdihaghverdiliewpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
psutil = "^6.1.1"


[tool.poetry.group.rest.dependencies]
fastapi = {version = "^0.115.7", extras = ["all"]}
aiohttp = "^3.11.11"
psutil = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
